--- a/secure-coding/enviroments.yaml
+++ b/secure-coding/enviroments.yaml
@@ -5,6 +5,18 @@ dependencies:
   - python=3.9
   - pip
   - pip:
-    - flask 
-    - flask-socketio
-    - flask-sqlalchemy
+    - flask>=2.0.3
+    - flask-socketio==5.3.4
+    - flask-sqlalchemy==3.0.3
+    - flask-login==0.5.0
+    - flask-wtf==1.0.0
+    - werkzeug==2.0.3
+    - bcrypt==4.0.1
+    - python-dotenv==0.21.0
+    - cryptography==38.0.4
+    - pytz==2023.3
+    - pyjwt==2.6.0
+    - gunicorn==20.1.0
+    - gevent==22.10.2
+    - pip-audit==2.5.1
+    - bandit==1.7.4
